<?xml version="1.0" encoding="utf-8"?>
<!-- 设置页面中”精品应用“图标布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include
        android:id="@+id/setting_quality_app"
        layout="@layout/setting_main_textview_transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin10"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginRight="@dimen/margin10"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/setting_quality_app_zaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/margin10"
                android:src="@drawable/app_icon" />

            <TextView
                style="@style/textview_white_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_app_zaker" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/setting_quality_app_ff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/margin10"
                android:src="@drawable/app_icon" />

            <TextView
                style="@style/textview_white_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_app_ff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/setting_quality_app_gq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/margin10"
                android:src="@drawable/app_icon" />

            <TextView
                style="@style/textview_white_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_app_gq" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/setting_quality_app_tbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/margin10"
                android:src="@drawable/app_icon" />

            <TextView
                style="@style/textview_white_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/setting_app_tbt" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/textview_white_16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"
        android:background="@drawable/setting_doubl_cutoff_rulee"
        android:gravity="center"
        android:text="@string/setting_click_more" />

</LinearLayout>